[package]
name = "dbus-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = { version = "0.23", features = ["event-stream"] }
zbus = "2.3"
zvariant = "3.3"
async-std = { version = "1.11", features = ["attributes", "std"] }
futures = "*"
