[package]
name = "dbus-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = { version = "0.23", features = ["event-stream"] }
zbus = { version = "2.3", features = ["xml"] }
zvariant = "3.3"
async-std = { version = "1.11", features = ["attributes", "std"] }
futures = "*"
serde = "1.0"
regex = "1"
